samples/_failures_safe/1761635098_bcb60f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dcf32b5.c: In function ‘main’:
./samples/SAFE/__tmp_2dcf32b5.c:153:5: error: expected expression at end of input
  153 |     if (
      |     ^~
./samples/SAFE/__tmp_2dcf32b5.c:153:5: error: expected declaration or statement at end of input
